[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["jirame"]


[project]
name = "jirame"
version = "0.0.1"
authors = [
  { name="Wajdi Al-Hawari", email="w.hawari@gmail.com" },
]
description = "Jira for nerds"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/idjaw/jirame"
"Bug Tracker" = "https://github.com/idjaw/jirame/issues"

[project.optional-dependencies]
dev = [
  "black==22.3.0",
  "flake8==3.9.2",
  "isort==5.8.0",
  "mypy==0.950",
  "pylint==2.8.2",
  "pytest==7.1.2",
  "pytest-cov==3.0.0",
  "pytest-mock==3.7.0",
  "requests-mock==1.9.3",
]

# pytest config
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
